[package]
name = "my_contracts"
version = "0.1.0"
authors = ["zZackz zzackzz@protonmail.com"]
edition = "2021"

[dependencies]
ink = { version = "4.0.0-beta", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
openbrush = { tag = "3.0.0", git = "https://github.com/727-Ventures/openbrush-contracts", default-features = false, features = ["psp22", "ownable"] }

logics_pkg = { path = "../../logics", default-features = false }


[lib]
name = "my_contracts"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "openbrush/std",
    "logics_pkg/std",
]
ink-as-dependency = []

[profile.release]
overflow-checks = false